css/fervidum.css
:root {
  --fervidumColor: #fd9e44ff;
}

body {
  position: relative;
  isolation: isolate;
  overflow-x: hidden;
  background-color: #f4f6f8;
}

.page {
  background-color: transparent;
}

.fervidumSweep {
  position: fixed;
  inset: 0;
  z-index: 0;
  width: 100vw;
  height: 100vh;
  opacity: 0;
  pointer-events: none;
  transition: opacity 180ms linear;
}

.fervidumSweep.is-active {
  opacity: 1;
}

.fervidumSweep.is-restoring {
  transition: opacity 460ms ease-in-out;
}

.fervidumSweep.is-restoring.is-fading {
  opacity: 0;
}

body.fervidumComplete {
  background-color: #f4f6f8;
}

.gallery {
  position: relative;
  z-index: 1;
}

.fervidumTile {
  position: relative;
}

.fervidumWarpHost {
  position: relative;
}

.fervidumSource {
  position: relative;
  z-index: 1;
  touch-action: manipulation;
  transition: opacity 220ms ease-in-out;
}

.fervidumWave {
  position: absolute;
  inset: 0;
  display: block;
  z-index: 2;
  width: 100%;
  height: 100%;
  opacity: 0;
  overflow: hidden;
  pointer-events: none;
  transition: opacity 220ms ease-in-out;
  will-change: opacity;
}

body.fervidumWarpActive .fervidumSource {
  opacity: 0;
}

body.fervidumWarpActive .fervidumWave {
  opacity: 1;
}

body.fervidumExit .fervidumSource {
  opacity: 1;
  transition: opacity 260ms ease-out;
}

body.fervidumExit .fervidumWave {
  opacity: 0;
  transition: opacity 260ms ease-out;
}

body.fervidumReset .fervidumSource {
  opacity: 1;
  transition: none;
}

body.fervidumReset .fervidumWave {
  opacity: 0;
  transition: none;
}

